--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/RobinLuongo/UEG_2.0#readme",
   "dependencies": {
     "axios": "^0.19.0",
+    "frontmatter-markdown-loader": "^3.1.0",
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
