--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,7 +6,8 @@ public_folder: images
 collections:
   - name: "blog"
     label: "Blog"
-    folder: "content" # The path to the folder where the documents are stored
+    folder: "public/content" # The path to the folder where the documents are stored
+    extension: "json"
     create: true # Allow users to create new documents in this collection
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
     fields: # The fields for each document, usually in front matter
