--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^9.1.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-markdown": "^4.3.1",
     "react-modal": "^3.11.1"
   }
 }
